crates/backyard-parser/tests/snapshots/enums__content.snap
---
source: crates/backyard-parser/tests/enums.rs
assertion_line: 38
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: enum
    name:
      node_type: identifier
      name: Suit
      loc:
        start:
          line: 1
          column: 5
          offset: 5
        end:
          line: 1
          column: 9
          offset: 9
      leadings: []
      trailings: []
    enum_type: ~
    implements:
      node_type: identifier
      name: SuitInterface
      loc:
        start:
          line: 1
          column: 21
          offset: 21
        end:
          line: 1
          column: 34
          offset: 34
      leadings: []
      trailings: []
    body:
      - node_type: enum_item
        value:
          node_type: identifier
          name: Hearts
          loc:
            start:
              line: 2
              column: 7
              offset: 44
            end:
              line: 2
              column: 13
              offset: 50
          leadings: []
          trailings: []
        loc:
          start:
            line: 2
            column: 2
            offset: 39
          end:
            line: 2
            column: 7
            offset: 44
        leadings: []
        trailings: []
      - node_type: enum_item
        value:
          node_type: identifier
          name: Spades
          loc:
            start:
              line: 3
              column: 7
              offset: 59
            end:
              line: 3
              column: 13
              offset: 65
          leadings: []
          trailings: []
        loc:
          start:
            line: 3
            column: 2
            offset: 54
          end:
            line: 3
            column: 7
            offset: 59
        leadings: []
        trailings: []
      - node_type: const_property
        visibilities:
          - Public
        items:
          - node_type: assignment
            left:
              node_type: identifier
              name: MY_CONST
              loc:
                start:
                  line: 5
                  column: 15
                  offset: 83
                end:
                  line: 5
                  column: 23
                  offset: 91
              leadings: []
              trailings: []
            operator: "="
            right:
              node_type: string
              quote: Double
              value: constant
              loc:
                start:
                  line: 5
                  column: 26
                  offset: 94
                end:
                  line: 5
                  column: 26
                  offset: 94
              leadings: []
              trailings: []
            loc:
              start:
                line: 5
                column: 24
                offset: 92
              end:
                line: 5
                column: 26
                offset: 94
            leadings: []
            trailings: []
        loc:
          start:
            line: 5
            column: 2
            offset: 70
          end:
            line: 5
            column: 26
            offset: 94
        leadings: []
        trailings: []
      - node_type: method
        visibility: Public
        inheritance: ~
        is_static: false
        function:
          node_type: function
          is_ref: false
          name:
            node_type: identifier
            name: color
            loc:
              start:
                line: 7
                column: 18
                offset: 125
              end:
                line: 7
                column: 23
                offset: 130
            leadings: []
            trailings: []
          parameters: []
          return_type:
            node_type: type
            is_nullable: false
            name: string
            loc:
              start:
                line: 7
                column: 27
                offset: 134
              end:
                line: 7
                column: 33
                offset: 140
            leadings: []
            trailings: []
          body:
            node_type: block
            statements:
              - node_type: return
                statement:
                  node_type: match
                  condition:
                    node_type: this
                    loc:
                      start:
                        line: 8
                        column: 17
                        offset: 160
                      end:
                        line: 8
                        column: 17
                        offset: 160
                    leadings: []
                    trailings: []
                  arms:
                    - node_type: match_arm
                      conditions:
                        - node_type: static_lookup
                          left:
                            node_type: identifier
                            name: Suit
                            loc:
                              start:
                                line: 9
                                column: 6
                                offset: 175
                              end:
                                line: 9
                                column: 10
                                offset: 179
                            leadings: []
                            trailings: []
                          right:
                            node_type: identifier
                            name: Hearts
                            loc:
                              start:
                                line: 9
                                column: 12
                                offset: 181
                              end:
                                line: 9
                                column: 18
                                offset: 187
                            leadings: []
                            trailings: []
                          use_bracket: false
                          loc:
                            start:
                              line: 9
                              column: 10
                              offset: 179
                            end:
                              line: 9
                              column: 12
                              offset: 181
                          leadings: []
                          trailings: []
                        - node_type: static_lookup
                          left:
                            node_type: identifier
                            name: Suit
                            loc:
                              start:
                                line: 9
                                column: 20
                                offset: 189
                              end:
                                line: 9
                                column: 24
                                offset: 193
                            leadings: []
                            trailings: []
                          right:
                            node_type: identifier
                            name: Diamonds
                            loc:
                              start:
                                line: 9
                                column: 26
                                offset: 195
                              end:
                                line: 9
                                column: 34
                                offset: 203
                            leadings: []
                            trailings: []
                          use_bracket: false
                          loc:
                            start:
                              line: 9
                              column: 24
                              offset: 193
                            end:
                              line: 9
                              column: 26
                              offset: 195
                          leadings: []
                          trailings: []
                      expr:
                        node_type: string
                        quote: Single
                        value: Red
                        loc:
                          start:
                            line: 9
                            column: 38
                            offset: 207
                          end:
                            line: 9
                            column: 38
                            offset: 207
                        leadings: []
                        trailings: []
                      loc:
                        start:
                          line: 9
                          column: 6
                          offset: 175
                        end:
                          line: 9
                          column: 43
                          offset: 212
                      leadings: []
                      trailings: []
                    - node_type: match_arm
                      conditions:
                        - node_type: static_lookup
                          left:
                            node_type: identifier
                            name: Suit
                            loc:
                              start:
                                line: 10
                                column: 6
                                offset: 220
                              end:
                                line: 10
                                column: 10
                                offset: 224
                            leadings: []
                            trailings: []
                          right:
                            node_type: identifier
                            name: Clubs
                            loc:
                              start:
                                line: 10
                                column: 12
                                offset: 226
                              end:
                                line: 10
                                column: 17
                                offset: 231
                            leadings: []
                            trailings: []
                          use_bracket: false
                          loc:
                            start:
                              line: 10
                              column: 10
                              offset: 224
                            end:
                              line: 10
                              column: 12
                              offset: 226
                          leadings: []
                          trailings: []
                        - node_type: static_lookup
                          left:
                            node_type: identifier
                            name: Suit
                            loc:
                              start:
                                line: 10
                                column: 19
                                offset: 233
                              end:
                                line: 10
                                column: 23
                                offset: 237
                            leadings: []
                            trailings: []
                          right:
                            node_type: identifier
                            name: Spades
                            loc:
                              start:
                                line: 10
                                column: 25
                                offset: 239
                              end:
                                line: 10
                                column: 31
                                offset: 245
                            leadings: []
                            trailings: []
                          use_bracket: false
                          loc:
                            start:
                              line: 10
                              column: 23
                              offset: 237
                            end:
                              line: 10
                              column: 25
                              offset: 239
                          leadings: []
                          trailings: []
                      expr:
                        node_type: string
                        quote: Single
                        value: Black
                        loc:
                          start:
                            line: 10
                            column: 35
                            offset: 249
                          end:
                            line: 10
                            column: 35
                            offset: 249
                        leadings: []
                        trailings: []
                      loc:
                        start:
                          line: 10
                          column: 6
                          offset: 220
                        end:
                          line: 10
                          column: 35
                          offset: 249
                      leadings: []
                      trailings: []
                  loc:
                    start:
                      line: 8
                      column: 11
                      offset: 154
                    end:
                      line: 11
                      column: 4
                      offset: 261
                  leadings: []
                  trailings: []
                loc:
                  start:
                    line: 8
                    column: 4
                    offset: 147
                  end:
                    line: 11
                    column: 4
                    offset: 261
                leadings: []
                trailings: []
            loc:
              start:
                line: 7
                column: 34
                offset: 141
              end:
                line: 12
                column: 2
                offset: 266
            leadings: []
            trailings: []
          loc:
            start:
              line: 7
              column: 9
              offset: 116
            end:
              line: 12
              column: 2
              offset: 266
          leadings: []
          trailings: []
        loc:
          start:
            line: 7
            column: 2
            offset: 109
          end:
            line: 12
            column: 2
            offset: 266
        leadings: []
        trailings: []
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 13
        column: 0
        offset: 268
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 13
    column: 0
    offset: 268
leadings: []
trailings: []
