crates/backyard-parser/tests/snapshots/enums__typed.snap
---
source: crates/backyard-parser/tests/enums.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: enum
    name:
      node_type: identifier
      name: Suit
      loc:
        start:
          line: 1
          column: 5
          offset: 5
        end:
          line: 1
          column: 9
          offset: 9
      leadings: []
      trailings: []
    enum_type:
      node_type: type
      is_nullable: false
      name: int
      loc:
        start:
          line: 1
          column: 11
          offset: 11
        end:
          line: 1
          column: 14
          offset: 14
      leadings: []
      trailings: []
    implements: ~
    body:
      - node_type: enum_item
        value:
          node_type: assignment
          left:
            node_type: identifier
            name: Hearts
            loc:
              start:
                line: 2
                column: 7
                offset: 24
              end:
                line: 2
                column: 13
                offset: 30
            leadings: []
            trailings: []
          operator: "="
          right:
            node_type: number
            value: "5"
            loc:
              start:
                line: 2
                column: 16
                offset: 33
              end:
                line: 2
                column: 16
                offset: 33
            leadings: []
            trailings: []
          loc:
            start:
              line: 2
              column: 14
              offset: 31
            end:
              line: 2
              column: 16
              offset: 33
          leadings: []
          trailings: []
        loc:
          start:
            line: 2
            column: 2
            offset: 19
          end:
            line: 2
            column: 16
            offset: 33
        leadings: []
        trailings: []
      - node_type: enum_item
        value:
          node_type: assignment
          left:
            node_type: identifier
            name: Spades
            loc:
              start:
                line: 3
                column: 7
                offset: 43
              end:
                line: 3
                column: 13
                offset: 49
            leadings: []
            trailings: []
          operator: "="
          right:
            node_type: number
            value: "6"
            loc:
              start:
                line: 3
                column: 16
                offset: 52
              end:
                line: 3
                column: 16
                offset: 52
            leadings: []
            trailings: []
          loc:
            start:
              line: 3
              column: 14
              offset: 50
            end:
              line: 3
              column: 16
              offset: 52
          leadings: []
          trailings: []
        loc:
          start:
            line: 3
            column: 2
            offset: 38
          end:
            line: 3
            column: 16
            offset: 52
        leadings: []
        trailings: []
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 4
        column: 0
        offset: 55
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 4
    column: 0
    offset: 55
leadings: []
trailings: []
